Bug 245931. Fix focus issues in accessibility APIs. r=pkw, sr=bryner